# dkml-ghmirror

./: .bumpversion.prerelease.cfg  .bumpversion.release.cfg  .dkmlroot  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES.md  CMakeLists.txt  CMakePresets.json  CMakePresetsCleared.json  CMakePresetsGenerated.json  DEVELOPERS.md  LICENSE.txt  README.md  dkml-apps.opam  dune  dune-project  opam-dkml.opam  version.cmake
.ci/dkml-compilers/gl/: setup-dkml.gitlab-ci.yml
.github/workflows/: .gitkeep  cross-unix.yml  vagrant-win32.yml
.gitlab/ci/: pages.gitlab-ci.yml  test.gitlab-ci.yml  unix-package-ocaml.gitlab-ci.yml  windows-package-ocaml-opam-repo.gitlab-ci.yml  windows-package-ocaml.gitlab-ci.yml  windows-package-opam.gitlab-ci.yml  windows-test-setupuserprofile.gitlab-ci.yml  windows.gitlab-ci.yml
buildtime/: dune  sexp_merge_configurator.ml
ci/: build-test.sh
contributors/: .gitignore  .userprofile.cachekey  Makefile  README.md  conf.py  index.rst  os-darwin.mk  os-linux.mk  os-windows.mk  release-prerel-delete.sh  release.sh  reupload.sh  upload-pkgconf.sh  upload-sqlite3.sh
contributors/changes/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.4.1.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3-pending.md  v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.3.0.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md  v2.1.0.md  v3.0.0.md
contributors/doc/: Advanced.rst  AdvancedDebugging.rst  AdvancedToolchain.rst  BeyondBasics.rst  CommandReference.rst  CompilingInDepth.rst  LocalProject.rst  OpamIntegration.rst  SdkProject.rst  Troubleshooting.rst
dependencies/: CMakeLists.txt  fetch-git-projects.cmake
installtime/cygwin/: idempotent-fix-symlink.sh
installtime/msys2/apps/common/: dkml_apps_common.ml  dkml_context.ml  dkml_environment.ml  dune
installtime/msys2/apps/common/config/: create_ocaml_from_file.ml  discover.ml  dkml_compiler_probe.h  dune
installtime/msys2/apps/opam-dkml/: cmd_init.ml  dune  opam_dkml.ml
installtime/msys2/apps/with-dkml/config/: create_ocaml_from_file.ml  discover.ml  dkml_compiler_probe.h  dune
installtime/none/: ci-flavor-packages.txt  full-flavor-4.12.1-minus-ci-flavor-packages.txt  full-flavor-4.13.1-minus-ci-flavor-packages.txt  full-flavor-minus-ci-flavor-packages.txt  full-flavor-versionagnostic-minus-ci-flavor-packages.txt
installtime/unix/: configure-opam-plugins.sh  create-diskuv-boot-DO-NOT-DELETE-switch.sh  create-opam-switch.sh  deinit-opam-root.sh  init-opam-root.sh  install-world.sh  setup-home.sh  setup-machine.sh
installtime/unix/private/: dune  (+33 more)
installtime/windows/: install-world.bat  install-world.ps1  setup-machine.ps1  setup-userprofile.bat  setup-userprofile.ps1
packaging/: CMakeLists.txt
packaging/version-bump/: CMakeLists.txt  DkMLPatches.cmake  DkMLReleaseParticipant.cmake  anyrun.in.sh  delete-tag-if-present.cmake  upsert-dkml-pkgs-core.in.sh  upsert-dkml-pkgs-flavor-dune.in.sh  upsert-dkml-pkgs-flavor-full-not-dune.in.sh  upsert-dkml-switch.in.sh
pkg/: CMakeLists.txt  README.md  environment.yml
pkg/bump/: CMakeLists.txt  CMakePresetsCleared.in.json  CMakePresetsGenerated.in.json  DkMLAnyRun.cmake  DkMLBumpLevels.cmake  DkMLBumpPackagesParticipant.cmake  DkMLBumpRepositoryParticipant.cmake  DkMLBumpVersionParticipant.cmake  DkMLPackages.cmake  DkMLPatches.cmake  DkMLPublish.cmake  DkMLReleaseParticipant.cmake  DkMLReleaseParticipant_core.cmake  anyrun.in.sh  archive.in.mtime  generate-compiler-launcher.in.sh  idempotent-tag.cmake  repository-field-url.in.opam  upload.in.cmake  upsert-api.in.sh  upsert-dkml-pkgs-compiler.in.sh  upsert-dkml-pkgs-flavor-dune.in.sh  upsert-dkml-pkgs-flavor-full-not-dune.in.sh  upsert-dkml-pkgs-introspect.in.sh  upsert-dkml-switch.in.sh  upsert-installer.in.sh  upsert-opam-console-upgrade.in.sh  upsert-utils.in.sh
runtime/unix/: _common_build.sh  _common_tool.sh  base.mk  build-sandbox-configure.sh  build-sandbox-init-common.sh  build-sandbox-init-vcpkg.sh  build-sandbox-init.sh  doc.mk  platform-dune-exec  platform-dune-exec.sh  platform-opam-exec  platform-opam-exec.sh  shell.sh  standard.mk  within-dev  within-dev.sh  within-sandbox  within-sandbox.sh
runtime/windows/: makeit.cmd  upgrade.ps1
vagrant/win32/: README.md  Vagrantfile  dkmlversion.txt  test-language.ps1
(+45 files in other folders)
