opam-version: "2.0"
synopsis: "Executables for DKML"
maintainer: "opensource+diskuv-ocaml@support.diskuv.com"
authors: "[Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>]"
license: "https://gitlab.com/diskuv/diskuv-ocaml/-/raw/main/LICENSE.txt"
homepage: ["https://diskuv.gitlab.io/diskuv-ocaml"]
bug-reports: ["https://gitlab.com/diskuv/diskuv-ocaml/-/issues"]
dev-repo: "git+https://gitlab.com/diskuv/diskuv-ocaml.git"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.12.0"}
]
